src/widgets/snapshots/tvision_rs__widgets__list_viewer__tests__list_current_item_bright_only_in_the_focused_pane.snap
---
source: src/widgets/list_viewer.rs
expression: "crate::screen::snapshot::snapshot(&buf, None)"
---
size: 17x2
cursor: hidden
text:
| item0    item0  |
| item1    item1  |
attr:
|aaaaaaaa.bbbbbbbb|
|cccccccc.cccccccc|
legend:
  . default
  a fg=RGB(255,255,255) bg=RGB(0,170,0)
  b fg=RGB(255,255,85) bg=RGB(0,170,170)
  c fg=RGB(0,0,0) bg=RGB(0,170,170)
