src/widgets/snapshots/tvision_rs__widgets__list_viewer__tests__snapshot_empty_shows_placeholder.snap
---
source: src/widgets/list_viewer.rs
expression: "render(&mut l, 12, 3)"
---
size: 12x3
cursor: hidden
text:
| <empty>    |
|            |
|            |
attr:
|aaaaaaaaaaaa|
|aaaaaaaaaaaa|
|aaaaaaaaaaaa|
legend:
  . default
  a fg=RGB(0,0,0) bg=RGB(0,170,170)
