src/widgets/snapshots/tvision_rs__widgets__list_viewer__tests__snapshot_find_highlights_first_match.snap
---
source: src/widgets/list_viewer.rs
expression: "render(&mut fake, 14, 4)"
---
size: 14x4
cursor: hidden
text:
| banana       |
| orange       |
| grape        |
|              |
attr:
|aabbaaaaaaaaaa|
|cccbbccccccccc|
|cccccccccccccc|
|cccccccccccccc|
legend:
  . default
  a fg=RGB(255,255,255) bg=RGB(0,170,0)
  b fg=RGB(255,255,85) bg=RGB(0,170,170)
  c fg=RGB(0,0,0) bg=RGB(0,170,170)
